--- a/index.html
+++ b/index.html
@@ -504,6 +504,29 @@ function suffixOnlyMismatch(guess, actual) {
   const diffSuffix = g[g.length - 1] !== a[a.length - 1];
   return sameBase && diffSuffix;
 }
+// Add this above loadMap()
+let outsideMaskLayer;
+
+function applyOutsideGrayMask(countyGeoJSON) {
+  // Remove previous mask if it exists
+  if (outsideMaskLayer) {
+    map.removeLayer(outsideMaskLayer);
+  }
+
+  const outer = [
+    [[-90, -180], [-90, 180], [90, 180], [90, -180], [-90, -180]]
+  ];
+  const inner = countyGeoJSON.features[0].geometry.coordinates;
+
+  outsideMaskLayer = L.polygon([...outer, ...inner], {
+    fillColor: 'gray',
+    fillOpacity: 0.5,
+    stroke: false,
+    interactive: false
+  });
+
+  outsideMaskLayer.addTo(map);
+}
 
 async function loadMap() {
   await checkLogin();
