--- a/index.html
+++ b/index.html
@@ -693,38 +693,22 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
           className: "county-tooltip"
         });
 
-   layer.on('click', function handleLancClick(e) {
-  if (insideLancaster) return; // ✅ Prevent further clicks
+   layer.on('click', function () {
+  if (insideLancaster) return; // 🚫 Prevent second click
 
-  insideLancaster = true; // ✅ Flip state so it can't be triggered again
+  insideLancaster = true; // ✅ Flip flag
 
-  // ✅ Zoom into the bounds of Lancaster County
-  map.fitBounds(layer.getBounds());
+  // 🧹 Step 1: Remove gray overlay on Lancaster
+  map.removeLayer(countyLayer);
 
-  // ✅ Remove gray fill from inside Lancaster polygon
-  layer.setStyle({
-    fillOpacity: 0,
-    fillColor: null
-  });
-
-  // ✅ Dim the outside world using the official mask function
+  // 🎯 Step 2: Apply gray mask to the rest of the world
   applyOutsideGrayMask(data);
 
-  // ✅ Remove the "Lancaster County" tooltip forever
-  layer.unbindTooltip();
-
-  // ✅ Force focus out of the polygon to remove the black box
+  // ⏳ Step 3: Optional UI behavior
   setTimeout(() => {
-    map.fire('click', {
-      latlng: L.latLng(0, 0) // Outside any feature
-    });
+    map.fire('click'); // clears polygon focus
   }, 500);
 });
-
-
-
-
-
 
 
       }
