--- a/index.html
+++ b/index.html
@@ -633,8 +633,7 @@ layer.on('mouseout', function () {
 function handleRoadClick(e) {
   const layer = e.target;
   const id = String(layer.feature.id);
-  const name = layer.feature.properties.road_name;
-
+  const name = normalizeName(layer.feature.properties.road_name);
   const state = segmentStateMap.get(id);
   if (state?.correct || state?.used_hint) return;
 
