--- a/index.html
+++ b/index.html
@@ -672,12 +672,15 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
         layer.on('click', function (e) {
   map.fitBounds(layer.getBounds());
           // ✅ Enable all road layers for permanent clickability
-Object.values(nameToLayers).flat().forEach(layer => {
-  layer.options.interactive = true;
-  if (!layer._events?.click) {
-    layer.on('click', handleRoadClick);
-  }
-});
+setTimeout(() => {
+  Object.values(nameToLayers).flat().forEach(layer => {
+    layer.options.interactive = true;
+    if (!layer._events?.click) {
+      layer.on('click', handleRoadClick);
+    }
+  });
+}, 100); // 100ms delay
+
 
 
   // ⏳ After 0.5s, blur the polygon
