--- a/index.html
+++ b/index.html
@@ -684,17 +684,7 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
 
   map.fitBounds(layer.getBounds());
   
-  // ✅ Enable all road layers for permanent clickability
-  setTimeout(() => {
-    Object.values(nameToLayers).flat().forEach(layer => {
-      layer.options.interactive = true;
-      if (!layer._events?.click) {
-        layer.on('click', handleRoadClick);
-      }
-    });
-  }, 100); // 100ms delay
-
-
+ enableRoadClickabilityWhenReady();
 
 
   // ⏳ After 0.5s, blur the polygon
