--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
   vertical-align: middle;
   box-sizing: border-box; /* ✅ forces equal sizing and alignment */
 }
-
+.hidden-road {
+  display: none !important;
+}
 
     #auth-box {
   position: absolute;
@@ -198,7 +200,7 @@
 <div id="auth-box" class="legend" style="right: 10px; left: auto;">
   <div id="auth-message">Checking login...</div>
   <button id="login-btn" style="margin-top: 2px;">Login with Google</button>
-
+  
 <p id="login-note" style="
   font-size: 12px;
   color: #888;
