--- a/index.html
+++ b/index.html
@@ -716,21 +716,22 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
           className: "county-tooltip"
         });
 
-  layer.on('click', function (e) {
+ layer.on('click', function (e) {
   if (insideLancaster) return;
+  insideLancaster = true;
 
   map.fitBounds(layer.getBounds());
 
-  enableRoadClickabilityWhenReady();
+  // ✅ Show and activate roads after entering Lancaster
+  Object.values(nameToLayers).flat().forEach(layer => {
+    layer.options.interactive = true;
+    layer._path?.classList.remove('hidden-road');
+  });
 
   // ⏳ After 0.5s, blur the polygon
   setTimeout(() => {
-    insideLancaster = true; // ✅ Now correctly delayed
-
-    // Reset this layer's style
     layer.setStyle({ fillOpacity: 0.3 });
 
-    // 🔒 Disable focus/pointer temporarily
     const path = layer._path;
     if (path) {
       path.style.outline = 'none';
@@ -747,6 +748,7 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
     }, 500);
   }, 500);
 });
+
 
 
 
