--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
 <script type="module">
   let currentRoad = null;
   let activeRoadName = null;
+  let insideLancaster = false;
 
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
