--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
 <script type="module">
   let currentRoad = null;
   let activeRoadName = null;
+  let worldMask;
   let roadsLayerGroup = L.layerGroup(); // Holds all road layers
   let insideLancaster = false;
 
