--- a/index.html
+++ b/index.html
@@ -733,21 +733,18 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
     }).addTo(map); // ✅ This was missing
     function createWorldMask(feature) {
   const bounds = map.getBounds().pad(1);
+
+  // Outer giant square that covers the map view
   const outer = [
-    [bounds.getSouthWest().lat - 10, bounds.getSouthWest().lng - 10],
-    [bounds.getNorthEast().lat + 10, bounds.getNorthEast().lng + 10]
+    [bounds.getSouthWest().lng - 10, bounds.getSouthWest().lat - 10],
+    [bounds.getNorthEast().lng + 10, bounds.getSouthWest().lat - 10],
+    [bounds.getNorthEast().lng + 10, bounds.getNorthEast().lat + 10],
+    [bounds.getSouthWest().lng - 10, bounds.getNorthEast().lat + 10],
+    [bounds.getSouthWest().lng - 10, bounds.getSouthWest().lat - 10]
   ];
 
-  const outerRing = [
-    [outer[0][0], outer[0][1]],
-    [outer[1][0], outer[0][1]],
-    [outer[1][0], outer[1][1]],
-    [outer[0][0], outer[1][1]],
-    [outer[0][0], outer[0][1]]
-  ];
-
-  // Get interior rings
   let holes = [];
+
   if (feature.geometry.type === 'Polygon') {
     holes = feature.geometry.coordinates;
   } else if (feature.geometry.type === 'MultiPolygon') {
@@ -758,10 +755,11 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
     type: "Feature",
     geometry: {
       type: "Polygon",
-      coordinates: [outerRing, ...holes] // cut holes for Lancaster
+      coordinates: [outer, ...holes] // outer is filled, holes are cut out
     }
   };
 }
+
 
 
   });
