--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
       fillColor: '#cccccc',
       fillOpacity: 0.7,
       stroke: false,
-      pane: 'overlayPane'
+      pane: 'maskPane'
     }
   }).addTo(map);
 
